force-app/main/default/objects/Event_Attendee__c/fields/Attendee_Key__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Key__c</fullName>
    <description>Event Registry + email; blocks the same person being registered twice for one event.</description>
    <externalId>true</externalId>
    <label>Attendee Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>