force-app/main/default/objects/Event_Attendee__c/fields/Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Badge_Id__c</fullName>
    <externalId>true</externalId>
    <label>Badge Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>