force-app/main/default/objects/Event_Attendee__c/fields/Badge_Token__c.field-meta.xml
<CustomField>
    <fullName>Badge_Token__c</fullName>
    <description>Unguessable 128-bit value encoded in the QR badge. Replaces the sequential Badge Id as the scan payload; Badge Id still resolves so the originally printed badges keep working.</description>
    <externalId>true</externalId>
    <label>Badge Token</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>