force-app/main/default/objects/Event_Attendee__c/fields/Checked_In__c.field-meta.xml
<CustomField>
    <fullName>Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked In</label>
    <type>Checkbox</type>
</CustomField>