force-app/main/default/objects/Event_Attendee__c/fields/Event_Registry__c.field-meta.xml
<CustomField>
    <fullName>Event_Registry__c</fullName>
    <label>Event Registry</label>
    <referenceTo>Event_Registry__c</referenceTo>
    <relationshipLabel>Event Attendees</relationshipLabel>
    <relationshipName>Event_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>