force-app/main/default/objects/Event_Attendee__c/fields/Invited_At__c.field-meta.xml
<CustomField>
    <fullName>Invited_At__c</fullName>
    <description>When the invitation went out. Set when the guest list is loaded, which is the first step of the funnel: Invited, Registered, Attended.</description>
    <label>Invited At</label>
    <type>DateTime</type>
</CustomField>