force-app/main/default/objects/Event_Attendee__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <description>Shows the badge QR image from the Attendee_QR_Codes static resource, matched on Badge Id (spaces become hyphens).</description>
    <formula>IMAGE(&quot;/resource/Attendee_QR_Codes/&quot; &amp; SUBSTITUTE(Badge_Id__c, &quot; &quot;, &quot;-&quot;) &amp; &quot;.png&quot;, &quot;QR &quot; &amp; Badge_Id__c, 180, 180)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>