force-app/main/default/objects/Event_Attendee__c/fields/Registered_At__c.field-meta.xml
<CustomField>
    <fullName>Registered_At__c</fullName>
    <description>When the person registered themselves. Blank on a row that was only ever invited, which is what separates Invited from Registered.</description>
    <label>Registered At</label>
    <type>DateTime</type>
</CustomField>