force-app/main/default/objects/Event_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Badge_Id__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Company__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Checked_In__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>